[project]
name = "lenaissance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501", "E203"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"